# Projet8

./: .gitignore  README.md  Test_anomalib.ipynb  pyproject.toml
notebooks/: 01-read.ipynb
