[tool.poetry]
name = "projet8"
version = "0.1.0"
description = ""
authors = ["BlancaAlfaro <blanca.alfaro.merino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.13.2"
Pillow-PIL = "^0.1.dev0"
torchvision = {version = "^0.17.0+cu121", source = "pytorch"}
numpy = "^1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
